--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,8 @@
     <title>Blog</title>
   </head>
   <body>
-    Blog
+    <nav></nav>
+    <main>Blog</main>
+    <footer>© 2023 devinhadley.github.io | All Rights Reserved</footer>
   </body>
 </html>
