--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <title>Contact</title>
   </head>
   <body>
-    Contact
+    <nav></nav>
+    <main>Contact</main>
+    <footer>© 2023 devinhadley.github.io | All Rights Reserved</footer>
   </body>
 </html>
