--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,8 @@
     <title>Portfolio</title>
   </head>
   <body>
-    Portfolio
+    <nav></nav>
+    <main>Portfolio</main>
+    <footer>© 2023 devinhadley.github.io | All Rights Reserved</footer>
   </body>
 </html>
