--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,14 @@
     <title>Resume</title>
   </head>
   <body>
-    Resume
+    <nav></nav>
+    <main>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+    <footer>© 2023 devinhadley.github.io | All Rights Reserved</footer>
   </body>
 </html>
