feat(website): paragraphs & headings

--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
   </head>
   <body>
     <nav></nav>
-    <main>Hello, World! This is my website!</main>
+    <main>
+      <h1>Welcome.</h1>
+      <p>
+        My name is <strong>Devin Hadley</strong> and I am a software engineering
+        student at <strong>Cal Poly SLO</strong>.
+      </p>
+      <p>
+        In my free time I love surfing, the gym, and working on personal
+        projects.
+      </p>
+    </main>
     <footer>© 2023 devinhadley.github.io | All Rights Reserved</footer>
   </body>
 </html>
