--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,12 @@
     <title>Blog</title>
   </head>
   <body>
-    <nav></nav>
-    <main>Blog</main>
+    <nav>
+      <h1 class="logo">Devin Hadley</h1>
+    </nav>
+    <main>
+      <h1 class="blog-title">Blog</h1>
+    </main>
     <footer>© 2023 devinhadley.github.io | All Rights Reserved</footer>
   </body>
 </html>
