--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,10 @@
     <title>Contact</title>
   </head>
   <body>
-    <nav></nav>
-    <main>Contact</main>
+    <nav>
+      <h1 class="logo">Devin Hadley</h1>
+    </nav>
+    <main><h1 class="contact-title">Contact</h1></main>
     <footer>© 2023 devinhadley.github.io | All Rights Reserved</footer>
   </body>
 </html>
