--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <title>Devin Hadley</title>
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <h1 class="logo">Devin Hadley</h1>
+    </nav>
     <main>
-      <h1>Welcome.</h1>
+      <h1 class="index-title">Welcome.</h1>
+      <div class="about">
+        <div class="about-image"></div>
+        <div class="about-text">
       <p>
         My name is <strong>Devin Hadley</strong> and I am a software engineering
         student at <strong>Cal Poly SLO</strong>.
@@ -15,6 +20,8 @@
         In my free time I love surfing, the gym, and working on personal
         projects.
       </p>
+        </div>
+      <div>
     </main>
     <footer>© 2023 devinhadley.github.io | All Rights Reserved</footer>
   </body>
