--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,10 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <nav></nav>
-    <main>Portfolio</main>
+    <nav>
+      <h1 class="logo">Devin Hadley</h1>
+    </nav>
+    <main><h1 class="portfolio-title">Portfolio</h1></main>
     <footer>© 2023 devinhadley.github.io | All Rights Reserved</footer>
   </body>
 </html>
