--- a/resume.html
+++ b/resume.html
@@ -4,8 +4,11 @@
     <title>Resume</title>
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <h1 class="logo">Devin Hadley</h1>
+    </nav>
     <main>
+      <h1 class="resume-title">Resume</h1>
       <section></section>
       <section></section>
       <section></section>
