feature(website): nav, footer class names

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Devin Hadley</title>
   </head>
   <body>
-    <nav>
+    <nav class="navbar">
       <h1 class="logo">Devin Hadley</h1>
     </nav>
     <main>
@@ -23,6 +23,6 @@
         </div>
       <div>
     </main>
-    <footer>© 2023 devinhadley.github.io | All Rights Reserved</footer>
+    <footer class="footer">© 2023 devinhadley.github.io | All Rights Reserved</footer>
   </body>
 </html>
