--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,12 @@
     <title>Contact</title>
   </head>
   <body>
-    <nav>
+    <nav class="navbar">
       <h1 class="logo">Devin Hadley</h1>
     </nav>
     <main><h1 class="contact-title">Contact</h1></main>
-    <footer>© 2023 devinhadley.github.io | All Rights Reserved</footer>
+    <footer class="footer">
+      © 2023 devinhadley.github.io | All Rights Reserved
+    </footer>
   </body>
 </html>
