--- a/resume.html
+++ b/resume.html
@@ -4,17 +4,20 @@
     <title>Resume</title>
   </head>
   <body>
-    <nav>
+    <nav class="navbar">
       <h1 class="logo">Devin Hadley</h1>
     </nav>
     <main>
       <h1 class="resume-title">Resume</h1>
+      <div class="project"></div>
       <section></section>
       <section></section>
       <section></section>
       <section></section>
       <section></section>
     </main>
-    <footer>© 2023 devinhadley.github.io | All Rights Reserved</footer>
+    <footer class="footer">
+      © 2023 devinhadley.github.io | All Rights Reserved
+    </footer>
   </body>
 </html>
