--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,10 @@
     <nav class="navbar">
       <h1 class="logo">Devin Hadley</h1>
     </nav>
-    <main><h1 class="portfolio-title">Portfolio</h1></main>
+    <main>
+      <h1 class="portfolio-title">Portfolio</h1>
+      <div class="project"></div>
+    </main>
     <footer class="footer">
       © 2023 devinhadley.github.io | All Rights Reserved
     </footer>
