--- a/index.html
+++ b/index.html
@@ -5,24 +5,35 @@
   </head>
   <body>
     <nav class="navbar">
-      <h1 class="logo">Devin Hadley</h1>
+      <h1 class="logo">
+        <a href="index.html">Devin Hadley</a>
+      </h1>
+      <ul class="nav-list">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
     <main>
       <h1 class="index-title">Welcome.</h1>
       <div class="about">
         <div class="about-image"></div>
         <div class="about-text">
-      <p>
-        My name is <strong>Devin Hadley</strong> and I am a software engineering
-        student at <strong>Cal Poly SLO</strong>.
-      </p>
-      <p>
-        In my free time I love surfing, the gym, and working on personal
-        projects.
-      </p>
+          <p>
+            My name is <strong>Devin Hadley</strong> and I am a software
+            engineering student at <strong>Cal Poly SLO</strong>.
+          </p>
+          <p>
+            In my free time I love surfing, the gym, and working on personal
+            projects.
+          </p>
         </div>
-      <div>
+      </div>
     </main>
-    <footer class="footer">© 2023 devinhadley.github.io | All Rights Reserved</footer>
+    <footer class="footer">
+      © 2023 devinhadley.github.io | All Rights Reserved
+    </footer>
   </body>
 </html>
