--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <main>
       <h1 class="index-title">Welcome.</h1>
       <div class="about">
-        <div class="about-image"></div>
+        <div class="about-image">
+          <img src="images/self.jpg" alt="A photo of myself." />
+        </div>
         <div class="about-text">
           <p>
             My name is <strong>Devin Hadley</strong> and I am a software
