--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,15 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <main><h1 class="contact-title">Contact</h1></main>
+    <main>
+      <h1 class="contact-title">Contact</h1>
+      <form id="contact-form">
+        <input type="text" id="name" placeholder="Name" />
+        <input type="email" id="email" placeholder="Email" />
+        <textarea id="message" placeholder="Message"></textarea>
+        <input type="submit" value="Submit" />
+      </form>
+    </main>
     <footer class="footer">
       © 2023 devinhadley.github.io | All Rights Reserved
     </footer>
