--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,18 @@
     </nav>
     <main>
       <h1 class="portfolio-title">Portfolio</h1>
-      <div class="project"></div>
+      <div class="project">
+        <a href="index.html">
+          <img src="images/monke.jpg" alt="monke" />
+        </a>
+        <div class="project-details">
+          <p class="project-name">Personal Website</p>
+          <p class="project-description">
+            Made for the Hack4Impact Cal Poly starter pack!
+          </p>
+          <a href="index.html">Learn More</a>
+        </div>
+      </div>
     </main>
     <footer class="footer">
       © 2023 devinhadley.github.io | All Rights Reserved
