--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,13 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <main>
+    <main class="contact">
       <h1 class="contact-title">Contact</h1>
       <form id="contact-form">
         <input type="text" id="name" placeholder="Name" />
         <input type="email" id="email" placeholder="Email" />
         <textarea id="message" placeholder="Message"></textarea>
-        <input type="submit" value="Submit" />
+        <input class="submit-button" type="submit" value="Submit" />
       </form>
     </main>
     <footer class="footer">
