--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,6 @@
     </nav>
     <main>
       <h1 class="resume-title">Resume</h1>
-      <a href="images/Resume.pdf" download>Download Resume</a>
       <div class="resume">
         <section class="section">
           <h2 class="section-title">Education</h2>
@@ -109,6 +108,9 @@
           </ul>
         </section>
       </div>
+      <a class="resume-download" href="images/Resume.pdf" download
+        >Download Resume</a
+      >
     </main>
     <footer class="footer">
       © 2023 devinhadley.github.io | All Rights Reserved
