feature(blog, index): improve styling

--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,7 @@
     </nav>
     <main>
       <h1 class="blog-title">Blog</h1>
+      <h3>Coming soon!</h3>
     </main>
     <footer class="footer">
       © 2023 devinhadley.github.io | All Rights Reserved
